--- a/_styles.scss
+++ b/_styles.scss
@@ -9,6 +9,7 @@
 
 @import "Blog/index";
 @import "BlogPosting/index";
+@import "Organization/index";
 @import "SportsEvent/index";
 
 $backgroundImage: url('../images/google-material-design-wallpaper-20.jpg') !default;
