correct first/last child selectors in organization and sportsevent

--- a/Organization/_index.scss
+++ b/Organization/_index.scss
@@ -46,10 +46,10 @@ div[typeof~=Organization] {
     background-color: inherit;
 
     > nav {
-      :first-child {
+      &:first-child {
         @extend .mdl-mini-footer__left-section;
       }
-      :last-child {
+      &:last-child {
         @extend .mdl-mini-footer__right-section;
       }
       > button {
