--- a/SportsEvent/_index.scss
+++ b/SportsEvent/_index.scss
@@ -53,7 +53,7 @@ main > div[typeof~=SportsEvent] {
         @extend .mdl-mini-footer__right-section;
       }
       > button {
-        @extend .mdl-button, mdl-button--colored;
+        @extend .mdl-button, .mdl-button--colored;
         @extend .mdl-js-button, .mdl-js-ripple-effect;
       }
     }
