--- a/Blog/_index.scss
+++ b/Blog/_index.scss
@@ -75,8 +75,9 @@ div[typeof~=Blog] {
       z-index: 9999;
 
       a {
-        @extend .mdl-button, .mdl-js-button;
-        @extend .mdl-js-ripple-effect;
+        @extend .mdl-button;
+        @extend .mdl-js-button !optional;
+        @extend .mdl-js-ripple-effect !optional;
         @extend .mdl-button--icon;
       }
     }
@@ -88,8 +89,10 @@ div[typeof~=Blog] {
       text-decoration: none;
 
       > button {
-        @extend .mdl-button, .mdl-js-button, .mdl-button--icon;
-        @extend .mdl-js-ripple-effect;
+        @extend .mdl-button;
+        @extend .mdl-button--icon;
+        @extend .mdl-js-button !optional;
+        @extend .mdl-js-ripple-effect !optional;
         @extend .mdl-color--white, .mdl-color-text--grey-900;
       }
 
