--- a/SportsEvent/_index.scss
+++ b/SportsEvent/_index.scss
@@ -54,7 +54,8 @@ main > div[typeof~=SportsEvent] {
       }
       > button {
         @extend .mdl-button, .mdl-button--colored;
-        @extend .mdl-js-button, .mdl-js-ripple-effect;
+        @extend .mdl-js-button !optional;
+        @extend .mdl-js-ripple-effect !optional;
       }
     }
   }
